# Projetos-com-QT-Cpp

./: Makefile.Debug  README.md
Abrindo_Programas_Sites_Arquivos/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Abrindo_novo_Formulario_transiscao_janelas/: CMakeLists.txt
Aertura_de_arquivo/: CursoQt.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Aertura_de_arquivo/DB/: Agenda.sql
Agenda/: Agenda.pro  IMG.qrc  Makefile  Makefile.Debug  Makefile.Release  cadastrar_no_banco.cpp  cadastrar_no_banco.h  cadastrar_no_banco.ui  fm_editarcontato.cpp  fm_editarcontato.h  fm_editarcontato.ui  fm_pesquisacontatos.cpp  fm_pesquisacontatos.h  fm_pesquisacontatos.ui  fm_principal.cpp  fm_principal.h  fm_principal.ui  janela.cpp  janela.h  janela.ui  ui_cadastrar_no_banco.h  ui_fm_editarcontato.h  ui_fm_pesquisacontatos.h  ui_fm_principal.h  ui_janela.h
Agenda/bancoDados/: BancoAgenda.db
Agenda/debug/: object_script.Agenda.Debug
Agenda/release/: moc_cadastrar_no_banco.cpp  moc_fm_editarcontato.cpp  moc_fm_pesquisacontatos.cpp  moc_fm_principal.cpp  moc_janela.cpp  object_script.Agenda.Release  qrc_IMG.cpp
Armazenando_Dados/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Arquivos_de_recursos/: ArquivoRecursos.qrc  Arquivos_de_recursos.pro  mainwindow.cpp  mainwindow.ui
Banco de dados sqlitestudio/: db_00.db
Bloco_Notas/: ArquivoRecursos.qrc  Bloco_Notas.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Caixa_menssagem_Question/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Campo_senha/: Makefile  Makefile.Debug  Makefile.Release  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_dialog.h  ui_mainwindow.h
Campo_senha/release/: moc_dialog.cpp
Campo_senha/startmenu/config/: config.xml
CheckBox/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ComboBox/: ComboBox.pro  icones.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
ControlesEstoque/: Arquivos_de_recursos.qrc  Conexao.h  ControlesEstoque.pro  fm_gestaocolaboradores.ui  fm_gestaoestoque.cpp  fm_gestaoestoque.h  fm_gestaoestoque.ui  fm_gestaovendas.cpp  fm_gestaovendas.h  fm_gestaovendas.ui  fm_login_user.cpp  fm_login_user.h  fm_main.cpp  fm_main.h  fm_main.ui  fm_nova_venda.cpp  fm_nova_venda.h  fm_nova_venda.ui  main.cpp  mystyle.qss  style.qss  tela1.ui  tela2.cpp  tela2.h  tela2.ui
ControlesEstoque - Cópia/: ControlesEstoque.pro  RecursosFile.qrc  fm_gestaocolaboradores.cpp  fm_gestaocolaboradores.h  fm_gestaoestoque.cpp  fm_gestaoestoque.ui  fm_login_user.h  fm_login_user.ui
ControlesEstoque - Cópia/DB/: controleEstoque.db
Criando_Arquivos/: icones.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Criando_Formulario/: CMakeLists.txt
Formulario/: Formulario.pro  janela2.cpp  janela2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
HTML_CSS/: HTML_CSS.pro  arquivo_recursos.qrc  mainwindow.cpp  mainwindow.ui
Inserindo_Conteudo_barraSattus/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Inserindo_imagens/: mainwindow.cpp  mainwindow.ui
Instalador_startmenu/config/: config.xml
Layout/: CMakeLists.txt  mainwindow.ui
ListWidget/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Menu_Barra_ferramentas/: Menu_Barra_ferramentas.pro  f_novo.cpp  f_novo.h  f_novo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
QMessagemBox_Question/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
RadioButton/: mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
RelogioDigital/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Slot_Signal/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Splash_Screen/: Arquivo_de_recursos.qrc  Splash_Screen.pro  main.cpp
TabWidget/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Timer/: mainwindow.cpp  mainwindow.h
Trabalhando_Com_Diretorios/: mainwindow.cpp  mainwindow.h  mainwindow.ui
teste/: estoque.cpp  estoque.ui  main.cpp  pesquisa.cpp  pesquisa.ui  qteste.cpp  qteste.h  qteste.ui  teste.pro
